Updating readme files and Spin SDK for Rust. Fixed wron reference in package.json for out filename
Signed-off-by: Mikkel Mørk Hegnhøj <mikkel@fermyon.com>

--- a/kv-sample/package.json
+++ b/kv-sample/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack && mkdirp dist && j2w -i build/bundle.js -o dist/hm-workshop1.wasm",
+    "build": "npx webpack && mkdirp dist && j2w -i build/bundle.js -o dist/kv-sample.wasm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
